Update + use Bootstrap 4.0b2

--- a/lektor/databags/main-nav.ini
+++ b/lektor/databags/main-nav.ini
@@ -1,8 +1,8 @@
-/ = Start
 /nieuws = Nieuws
-/todo = TODO
+/agenda = Agenda
 /training = Training
 /opleiding = Opleiding
 /lidmaatschap = Lidmaatschap
 /links = Links
 /over = Over
+/todo = TODO
