--- a/lektor/databags/main-nav.ini
+++ b/lektor/databags/main-nav.ini
@@ -1,8 +1,9 @@
-/nieuws = Nieuws
-/agenda = Agenda
+/ = Home
+#/nieuws = Nieuws
+#/agenda = Agenda
 /training = Training
-/opleiding = Opleiding
+/opleiding = Opleidingen
 /lidmaatschap = Lidmaatschap
 /links = Links
 /over = Over
-/todo = TODO
+#/todo = TODO
