--- a/lektor/databags/person.ini
+++ b/lektor/databags/person.ini
@@ -37,3 +37,7 @@ name = Ivo Roelandt
 [docent_jonatan_helpers]
 title = Docent
 name = Jonatan Helpers
+
+[admin_site]
+title = Rescue Web Developer Team
+email = admin@rescueteam.be
