--- a/lektor/models/certification.ini
+++ b/lektor/models/certification.ini
@@ -3,6 +3,10 @@ name = Hoger Redder Opleiding
 label = Opleiding {{ this.date_start | dateformat('YYYY') }}
 hidden = true
 
+[fields.title_prefix]
+label = Title Prefix
+type = string
+
 [fields.published]
 label = Published
 type = boolean
