Incorporated Axelle's and Jonatan's remarks

--- a/lektor/databags/club.ini
+++ b/lektor/databags/club.ini
@@ -1,7 +1,7 @@
 [nautilus_geraardsbergen]
 name = Nautilus Geraardsbergen
 url = http://www.ngb.be/
-aka = ngb
+aka = NGB
 
 [rescueteam_ninove]
 name = Rescue Team Ninove
