--- a/lektor/databags/person.ini
+++ b/lektor/databags/person.ini
@@ -16,10 +16,6 @@ title = Penningmeester
 name = Kris Beernaert
 email = penningmeester@rescueteam.be
 
-[manager1]
-title = Manager
-name = Elke Clerebaut
-
 [education]
 title = Opleidingen
 name = Jonatan Helpers
@@ -27,7 +23,7 @@ email = opleidingen@rescueteam.be
 
 [enrollment]
 title = Ledenbeheer
-name = Jonatan Helpers
+name = Dirk Van den Berghe
 email = leden@rescueteam.be
 
 [docent_ivo_roelandt]
