Add sitemap.xml, fix discoverability, fix inheritance, new website news post

--- a/lektor/models/enrollment.ini
+++ b/lektor/models/enrollment.ini
@@ -1,16 +1,9 @@
 [model]
 name = Enrollment
 label = {{ this.title }}
+inherits = page
 hidden = true
 protected = true
-
-[fields.title]
-label = Title
-type = string
-
-[fields.body]
-label = Body
-type = markdown
 
 [fields.mail_subject]
 label = Mail Subject
