--- a/lektor/models/newsitem.ini
+++ b/lektor/models/newsitem.ini
@@ -1,19 +1,12 @@
 [model]
 name = News Item
 label = {{ this.title }}
+inherits = page
 
 [fields.published]
 label = Published
 type = boolean
 
-[fields.title]
-label = Title
-type = string
-
 [fields.pub_datetime]
 label = Publication Time
 type = datetime
-
-[fields.body]
-label = Body
-type = markdown
