--- a/lektor/models/certifications.ini
+++ b/lektor/models/certifications.ini
@@ -1,15 +1,9 @@
 [model]
 name = Hoger Redder Opleidingen
 label = {{ this.title }}
+inherits = page
+hidden = true
 protected = true
-
-[fields.title]
-label = Title
-type = string
-
-[fields.body]
-label = Body
-type = markdown
 
 [children]
 model = certification
