--- a/lektor/models/contacts.ini
+++ b/lektor/models/contacts.ini
@@ -1,16 +1,9 @@
 [model]
 name = Contact
 label = {{ this.title }}
+inherits = page
 hidden = true
 protected = true
-
-[fields.title]
-label = Title
-type = string
-
-[fields.body]
-label = Body
-type = markdown
 
 [fields.contactperson_flows]
 label = Body
