--- a/lektor/models/newsitems.ini
+++ b/lektor/models/newsitems.ini
@@ -1,22 +1,15 @@
 [model]
 name = News Items
 label = {{ this.title }}
+inherits = page
 hidden = yes
 protected = yes
-
-[fields.title]
-label = Title
-type = string
-
-[fields.body]
-label = Body
-type = markdown
 
 [children]
 enabled = yes
 model = newsitem
 order_by = -pub_datetime
-slug_format = {{ this.pub_datetime | dateformat('YYYY/M/d/') }}{{ this.title }}
+slug_format = {{ this.pub_datetime | dateformat('YYYY/M/d/') }}{{ this.title | lower }}
 
 [pagination]
 enabled = yes
