--- a/lektor/models/recertifications.ini
+++ b/lektor/models/recertifications.ini
@@ -1,16 +1,9 @@
 [model]
 name = Hoger Redder Bijscholingen
 label = {{ this.title }}
+inherits = page
 hidden = true
 protected = true
-
-[fields.title]
-label = Title
-type = string
-
-[fields.body]
-label = Body
-type = markdown
 
 [children]
 model = recertification
