Further theming + new certifications + new recertifications

--- a/lektor/models/certification.ini
+++ b/lektor/models/certification.ini
@@ -3,13 +3,21 @@ name = Hoger Redder Opleiding
 label = Opleiding {{ this.date_start | dateformat('YYYY') }}
 hidden = true
 
-[fields.title_prefix]
-label = Title Prefix
-type = string
-
 [fields.published]
 label = Published
 type = boolean
+
+[fields.registration_open]
+label = Registratino Open
+type = boolean
+
+[fields.meta_description]
+label = Metadata Description
+type = string
+
+[fields.title_prefix]
+label = Title Prefix
+type = string
 
 [fields.location]
 label = Location
