--- a/lektor/models/contacts.ini
+++ b/lektor/models/contacts.ini
@@ -5,6 +5,10 @@ inherits = page
 hidden = true
 protected = true
 
+[fields.meta_description]
+label = Metadata Description
+type = string
+
 [fields.contactperson_flows]
 label = Body
 type = flow
