--- a/lektor/models/links.ini
+++ b/lektor/models/links.ini
@@ -3,10 +3,7 @@ name = Links
 label = {{ this.title }}
 hidden = true
 protected = true
-
-[fields.title]
-label = Title
-type = string
+inherits = page
 
 [fields.swimming_clubs]
 label = Swimming Clubs
