--- a/lektor/models/recertification.ini
+++ b/lektor/models/recertification.ini
@@ -7,6 +7,10 @@ hidden = true
 label = Published
 type = boolean
 
+[fields.registration_open]
+label = Registration Open
+type = boolean
+
 [fields.location]
 label = Location
 type = string
