Small updates: https + less whitespace

--- a/lektor/databags/club.ini
+++ b/lektor/databags/club.ini
@@ -5,7 +5,7 @@ aka = NGB
 
 [rescueteam_ninove]
 name = Rescue Team Ninove
-url = http://www.rescueteam.be/
+url = https://www.rescueteam.be/
 aka = RTN
 IBAN = BE06 0016 8399 0122
 subscription_fee = 90
