Override meta description in bijscholingen

--- a/lektor/models/certification.ini
+++ b/lektor/models/certification.ini
@@ -2,6 +2,7 @@
 name = Hoger Redder Opleiding
 label = Opleiding {{ this.date_start | dateformat('YYYY') }}
 hidden = true
+inherits = base
 
 [fields.published]
 label = Published
@@ -10,10 +11,6 @@ type = boolean
 [fields.registration_open]
 label = Registratino Open
 type = boolean
-
-[fields.meta_description]
-label = Metadata Description
-type = string
 
 [fields.title_prefix]
 label = Title Prefix
