--- a/lektor/models/page.ini
+++ b/lektor/models/page.ini
@@ -1,6 +1,7 @@
 [model]
 name = Page
 label = {{ this.title }}
+inherits = base
 
 [fields.title]
 label = Title
@@ -9,7 +10,3 @@ type = string
 [fields.body]
 label = Body
 type = markdown
-
-[fields.meta_description]
-label = Description
-type = string
