--- a/lektor/models/recertification.ini
+++ b/lektor/models/recertification.ini
@@ -2,6 +2,7 @@
 name = Hoger Redder Bijscholing
 label = Bijscholing {{ this.datetime_start | dateformat('YYYY-MM-d') }}
 hidden = true
+inherits = base
 
 [fields.published]
 label = Published
