--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -15,5 +15,25 @@
   "bugs": {
     "url": "https://github.com/madebr/rescueteam/issues"
   },
-  "homepage": "https://github.com/madebr/rescueteam#readme"
+  "homepage": "https://github.com/madebr/rescueteam#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "bootstrap": "^4.1.1",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "popper.js": "^1.14.3",
+    "postcss-loader": "^2.1.5",
+    "precss": "^3.1.2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
+  }
 }
