Use asynchronous form for enrollment

--- a/lektor/databags/person.ini
+++ b/lektor/databags/person.ini
@@ -37,3 +37,7 @@ name = Jonatan Helpers
 [admin_site]
 title = Rescue Web Developer Team
 email = admin@rescueteam.be
+
+[noreply_site]
+title = No-Reply
+email = no-reply@rescueteam.be
