--- a/lektor/models/enroll_mail.ini
+++ b/lektor/models/enroll_mail.ini
@@ -13,6 +13,6 @@ type = string
 label = Reply To
 type = string
 
-[fields.cc]
-label = Mail CC
-type = strings
+[fields.to]
+label = Mail To
+type = string
