--- a/lektor/models/enrollment.ini
+++ b/lektor/models/enrollment.ini
@@ -5,6 +5,10 @@ inherits = page
 hidden = true
 protected = true
 
+[fields.label_enlist]
+label = Label Enlist
+type = string
+
 [fields.mail_subject]
 label = Mail Subject
 type = string
