--- a/lektor/models/recertifications.ini
+++ b/lektor/models/recertifications.ini
@@ -5,6 +5,10 @@ inherits = page
 hidden = true
 protected = true
 
+[fields.label_enlist]
+label = Label Enlist
+type = string
+
 [children]
 model = recertification
 order_by = -datetime_start
