--- a/lektor/assets/.htaccess
+++ b/lektor/assets/.htaccess
@@ -8,3 +8,6 @@ RewriteCond %{HTTPS} !=on
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 ErrorDocument 404 /404.html
+
+# Disable Varnish Cache
+Header add "disablevcache" "true"
