--- a/lektor/models/certifications.ini
+++ b/lektor/models/certifications.ini
@@ -5,6 +5,10 @@ inherits = page
 hidden = true
 protected = true
 
+[fields.label_enlist]
+label = Label Enlist
+type = string
+
 [children]
 model = certification
 order_by = -date_start
