title to reeducation + fix form

--- a/lektor/models/certification.ini
+++ b/lektor/models/certification.ini
@@ -9,7 +9,7 @@ label = Published
 type = boolean
 
 [fields.registration_open]
-label = Registratino Open
+label = Registration Open
 type = boolean
 
 [fields.title_prefix]
