Send forms to debug + disable submit button after succesful submission

--- a/lektor/databags/person.ini
+++ b/lektor/databags/person.ini
@@ -26,6 +26,18 @@ title = Ledenbeheer
 name = Dirk Van den Berghe
 email = leden@rescueteam.be
 
+[admin_site]
+title = Rescue Web Developer Team
+email = admin@rescueteam.be
+
+[debug_site]
+title = Rescue Team Debuggers
+email = debug@rescueteam.be
+
+[noreply_site]
+title = No-Reply
+email = no-reply@rescueteam.be
+
 [docent_ivo_roelandt]
 title = Docent
 name = Ivo Roelandt
@@ -33,11 +45,3 @@ name = Ivo Roelandt
 [docent_jonatan_helpers]
 title = Docent
 name = Jonatan Helpers
-
-[admin_site]
-title = Rescue Web Developer Team
-email = admin@rescueteam.be
-
-[noreply_site]
-title = No-Reply
-email = no-reply@rescueteam.be
