Recertification december 2018 open for registration + change instructors

--- a/lektor/databags/person.ini
+++ b/lektor/databags/person.ini
@@ -45,3 +45,11 @@ name = Ivo Roelandt
 [docent_jonatan_helpers]
 title = Docent
 name = Jonatan Helpers
+
+[docent_thierry_vandekerckhove]
+title = Docent
+name = Thierry Vandekerckhove
+
+[docent_kim_casteleyn]
+title = Docent
+name = Kim Casteleyn
