--- a/lektor/databags/site.ini
+++ b/lektor/databags/site.ini
@@ -2,6 +2,6 @@ title_long = Rescue Team Ninove
 title_short = RTN
 year_lastchange = 2018
 description = Rescue Team Ninove is een zwemclub met nadruk op redderstechieken die wekelijks traint in het zwembad De Kleine Dender te Ninove. Onze club organiseert jaarlijks een cursus Hoger Redder. Twee keer per jaar wordt een bijscholing Hoger Redder georganiseerd.
-keywords = Redder,Opleiding,Bijscholing,zwemclub,sport,zwemmen,Ninove,Hoger,Rescue,Geraardsbergen,Aalst,Aalter,Galmaarden,Bever,Herne
+keywords = redder,opleiding,bijscholing,zwemclub,sport,zwemmen,Ninove,hoger,rescue,Geraardsbergen,Aalst,Aalter,Galmaarden,Bever,Herne
 url = https://www.rescueteam.be/
 facebook = https://www.facebook.com/rtninove/
