Update dates of 2019 + update hours of all

--- a/lektor/models/certification.ini
+++ b/lektor/models/certification.ini
@@ -26,11 +26,11 @@ type = date
 
 [fields.time_lesson_start]
 label = Time Common Start Lessons Common
-type = string
+type = datetime
 
 [fields.time_lesson_stop]
 label = Time Common Stop Lessons Common
-type = string
+type = datetime
 
 [fields.dates_lesson]
 label = Dates Lessons
