Reformulate start and ending hours of cert + add question to form

--- a/lektor/models/enroll_form.ini
+++ b/lektor/models/enroll_form.ini
@@ -5,6 +5,10 @@ inherits = page
 hidden = true
 protected = true
 
+[fields.question_howdoyouknowofus]
+label = Question How Do You Know Us?
+type=strings
+
 [fields.msg_success]
 label = Message on Success
 type = string
