Update www of gaversbad

--- a/lektor/databags/location.ini
+++ b/lektor/databags/location.ini
@@ -19,7 +19,7 @@ name = Gaversbad (De Gavers Oost-Vlaanderen)
 address = Onkerzelestraat 280,9500 Geraardsbergen,België
 phone = +32 54 43 53 51
 email = gaversbad@oost-vlaanderen.be
-url = http://degavers.be/public/dagrecreatie/gaversbad/index.cfm
+url = https://oost-vlaanderen.be/content/ovl/nl/ontspannen/recreatiedomeinen/de-gavers/sporten/zwembad.html
 facebook = https://www.facebook.com/provinciaaldomeindegavers/
 swimming_pool_indoor = 1
 
