--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -19,24 +19,25 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^4.9.3",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.7",
     "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.3",
     "webpack-cli": "^2.1.5"
   },
   "dependencies": {
-    "hoek": "^5.0.4"
+    "hoek": "^5.0.4",
+    "lodash": "^4.17.11"
   }
 }
