Remove 'den bleek' + add news

--- a/lektor/databags/club.ini
+++ b/lektor/databags/club.ini
@@ -1,6 +1,6 @@
 [nautilus_geraardsbergen]
 name = Nautilus Geraardsbergen
-url = http://www.ngb.be/
+url = https://www.ngb.be/
 aka = NGB
 
 [rescueteam_ninove]
