Install tar dependency explicitly

--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "hoek": "^5.0.4",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "tar": "^4.4.8"
   }
 }
