--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -26,19 +26,20 @@
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.15.0",
     "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
   },
   "dependencies": {
     "hoek": "^5.0.4",
-    "lodash": "^4.17.11",
-    "tar": "^4.4.8"
+    "lodash": "^4.17.14",
+    "lodash.template": "^4.5.0",
+    "tar": "^4.4.10"
   }
 }
