Add message about full (re)-certification

--- a/lektor/models/recertification.ini
+++ b/lektor/models/recertification.ini
@@ -12,6 +12,10 @@ type = boolean
 label = Registration Open
 type = boolean
 
+[fields.registration_full]
+label = Registration Full
+type = boolean
+
 [fields.location]
 label = Location
 type = string
