--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^5.0.0-alpha2",
     "css-loader": "^2.1.1",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
