--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -19,11 +19,11 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "bootstrap": "^5.0.0-alpha2",
+    "bootstrap": "^5.0.0-beta3",
     "css-loader": "^2.1.1",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
@@ -33,12 +33,12 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.44.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "hoek": "^5.0.4",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "tar": "^4.4.13"
   }
