Add address + vat number to contacts page

--- a/lektor/databags/club.ini
+++ b/lektor/databags/club.ini
@@ -6,6 +6,8 @@ aka = NGB
 [rescueteam_ninove]
 name = Rescue Team Ninove
 url = https://www.rescueteam.be/
+address = Magnoliastraat 32;9400 Ninove
 aka = RTN
 IBAN = BE06 0016 8399 0122
 subscription_fee = 90
+vat_number = 0451.551.628
