--- a/lektor/databags/i18n.ini
+++ b/lektor/databags/i18n.ini
@@ -25,3 +25,5 @@ month_9 = september
 month_10 = oktober
 month_11 = november
 month_12 = december
+club_address = maatschappelijke zetel
+vat_number = BTW nummer
