Add bijscholling june 2022

--- a/lektor/databags/person.ini
+++ b/lektor/databags/person.ini
@@ -53,3 +53,7 @@ name = Thierry Vandekerckhove
 [docent_kim_casteleyn]
 title = Docent
 name = Kim Casteleyn
+
+[docent_philippe_raes]
+title = Docent
+name = Philippe Raes
