--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -17,29 +17,27 @@
   },
   "homepage": "https://github.com/madebr/rescueteam#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-core": "^4.7.16",
     "bootstrap": "^5.0.2",
-    "css-loader": "^2.1.1",
-    "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^6.0.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.8",
+    "node-gyp": "10.0.1",
+    "node-sass": "^9.0.0",
     "popper.js": "^1.16.1",
-    "postcss-loader": "^2.1.6",
-    "precss": "^3.1.2",
+    "precss": "^4.0.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.1.2",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^3.3.12"
+    "url-loader": "^1.1.2"
   },
   "dependencies": {
     "hoek": "^5.0.4",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "tar": "^4.4.14"
+  },
+  "overrides": {
+    "node-sass": {
+      "node-gyp": "$node-gyp"
+    }
   }
 }
